28 June 2007

* Built-in cache using TDB (http://sourceforge.net/projects/tdb/). Currently
  disabled by default, enabled by building with make -DDB.

  Used as followed;

	# Declare the cache.
	$db = "~/.fdm.db"
	cache $db expire 2 weeks

	match not string "%[message_id]" to "" {
		# Filter messages already in the cache.	
		match in-cache $db key "%[message_id]"
			action mbox "duplicate-mail"

		# Add message-ids to the cache (any other string can be added
		# but message-ids are most useful).
		match all action to-cache $db key "%[message_id]"
	}

  Note the guard statement - the key can't be empty and news (NNTP) messages
  don't have a message-id.

  I'm still playing a bit with syntax and database backend so don't rely on
  this too much (I'm not convinced using the word "cache" for both news cache
  and this generic cache is a good idea. I'm also not convinced by TDB -
  nice though it is, I need to get a port done and accepted for OpenBSD, and
  I don't know how portable it is generally: BDBv3/4 may be a better option
  although they are a lot more complicated.)

27 June 2007

* New tags taken from the date header corresponding to the current time tags:
  mail-hour, mail-year, etc. If the header is invalid, the current time is used.
  Request/idea from Maximilian Gass.
* Make fdm-sanitize also obfuscate the lengths of login/pass with IMAP.
* Bug fix: "and not" rather than "not and" in ruleset -vv output.
* "match tag ..." is now completely gone.
* "value" keyword is now preferred for add-header action:

	action "ah" add-header "My-Header" value "ABC"

  but is not mandatory.
* fdm 1.2 released.

08 June 2007

* Check CN against FQDN and user-supplied host when verifying SSL certificates.

21 May 2007

* New layout for most of the fetch code. Now pretty much everything is done
  using a state machine for each fetch type rather than a mixture of linear
  code and state machine. Mail is now enqueued/dequeued using callbacks rather