@@ -1,4 +1,4 @@
-.\" $Id: fdm.conf.5,v 1.70 2007-06-27 10:57:46 nicm Exp $
+.\" $Id: fdm.conf.5,v 1.71 2007-06-28 15:00:33 nicm Exp $
 .\"
 .\" Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
 .\"
@@ -614,10 +614,6 @@ with contents
 .It Ic remove-header Ar name
 Remove all occurances of header
 .Ar name .
-.It Ic append-string Ar string
-Append
-.Ar string
-to the mail.
 .It Ic stdout Op Ic add-from
 Write the mail to
 .Em stdout .
